# laboratory_work_2.2_06

./: CMakeLists.txt  README.md
include/: array.h  const.h  functions.h  menu.h
src/: array.cpp  functions.cpp  main.cpp  menu.cpp
